# Analyse

./: README.md
QtAnalyse/: CMakeLists.txt  qtanalyse.pro
QtAnalyse/include/: dialogchcell.h  mainwindow.h  myplots.org  myplotsqwt.h
QtAnalyse/qtanalyse/: qtanalyse.pro
QtAnalyse/src/: chooserchsample.ui  dialogchcell.cpp  dialogchcell.ui  dialogonechannel.ui  histogramme.cpp  mainwindow.cpp  mainwindow.ui  myplots.org  myplotsqwt.cpp  progressbar.ui
analyses/: CMakeLists.txt
analyses/inc/: Tools.h
analyses/src/: Tools.cpp  analyses.cpp
